fixed alignment bugs in lesson 1 to 20

--- a/level4-A/lesson-02/main.scss
+++ b/level4-A/lesson-02/main.scss
@@ -147,7 +147,7 @@ body {
       .arrow-part {
         position: relative;
         &:before {
-          content: "";
+          content: '';
           position: absolute;
           left: -20px;
           top: 5px;
@@ -217,6 +217,7 @@ body {
         padding: 5px;
       }
       td {
+        color: #d0cece;
         text-align: left;
         padding: 6px;
         background-color: $background-grey;
